src/widgets/kernel/qopenglwidget.cpp
@@ -1342,6 +1342,8 @@ bool QOpenGLWidget::event(QEvent *e)
             break;
         if (d->initialized)
             d->reset();
+        if (isHidden())
+            break;
         // FALLTHROUGH
     case QEvent::Show: // reparenting may not lead to a resize so reinitalize on Show too
         if (!d->initialized && !size().isEmpty() && window() && window()->windowHandle()) {
